@@ -28,6 +28,8 @@ bzr-svn 0.6.2                    UNRELEASED
    * In authentication fallback, ignore schemes that can not be 
      mapped to ports rather than erroring out. (#384813)
 
+   * Cope with forbidden parts of the repository a bit better. (#261194)
+
 bzr-svn 0.6.1                    2009-05-22
 
   BUG FIXES
